--- a/login.html
+++ b/login.html
@@ -1,71 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="mn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetCare Hub - Login/Register</title>
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <!-- FontAwesome Icons -->
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <!-- CSS -->
+    <title>Register & Login</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="login_styles.css">
 </head>
 <body>
-    <!-- Container -->
-    <div class="auth-container">
-        <!-- Login Box -->
-        <div class="form-box" id="login-box">
-            <h2>Login</h2>
-            <form action="#">
-                <div class="input-group">
-                    <label for="email"><i class="fas fa-envelope"></i> Email</label>
-                    <input type="email" id="email" placeholder="Enter your email" required>
-                </div>
-                <div class="input-group">
-                    <label for="password"><i class="fas fa-lock"></i> Password</label>
-                    <input type="password" id="password" placeholder="Enter your password" required>
-                </div>
-                <button type="submit" class="btn-auth">Login</button>
-                <p class="switch-form">
-                    Don't have an account? <a href="#" onclick="toggleForm()">Register here</a>
-                </p>
-            </form>
+    <div class="container" id="signup" style="display:none;">
+      <h1 class="form-title">Register</h1>
+      <form method="post" action="register.php">
+        <div class="input-group">
+           <i class="fas fa-user"></i>
+           <input type="text" name="fName" id="fName" placeholder="First Name" required>
+           <label for="fname">First Name</label>
         </div>
-
-        <!-- Register Box -->
-        <div class="form-box hidden" id="register-box">
-            <h2>Register</h2>
-            <form action="#">
-                <div class="input-group">
-                    <label for="name"><i class="fas fa-user"></i> Name</label>
-                    <input type="text" id="name" placeholder="Enter your name" required>
-                </div>
-                <div class="input-group">
-                    <label for="register-email"><i class="fas fa-envelope"></i> Email</label>
-                    <input type="email" id="register-email" placeholder="Enter your email" required>
-                </div>
-                <div class="input-group">
-                    <label for="register-password"><i class="fas fa-lock"></i> Password</label>
-                    <input type="password" id="register-password" placeholder="Create a password" required>
-                </div>
-                <button type="submit" class="btn-auth">Register</button>
-                <p class="switch-form">
-                    Already have an account? <a href="#" onclick="toggleForm()">Login here</a>
-                </p>
-            </form>
+        <div class="input-group">
+            <i class="fas fa-user"></i>
+            <input type="text" name="lName" id="lName" placeholder="Last Name" required>
+            <label for="lName">Last Name</label>
         </div>
+        <div class="input-group">
+            <i class="fas fa-envelope"></i>
+            <input type="email" name="email" id="email" placeholder="Email" required>
+            <label for="email">Email</label>
+        </div>
+        <div class="input-group">
+            <i class="fas fa-lock"></i>
+            <input type="password" name="password" id="password" placeholder="Password" required>
+            <label for="password">Password</label>
+        </div>
+       <input type="submit" class="btn" value="Sign Up" name="signUp">
+      </form>
+      <p class="or">
+        ----------or--------
+      </p>
+      <div class="icons">
+        <i class="fab fa-google"></i>
+        <i class="fab fa-facebook"></i>
+      </div>
+      <div class="links">
+        <p>Already Have Account ?</p>
+        <button id="signInButton">Sign In</button>
+      </div>
     </div>
 
-    <!-- JavaScript -->
-    <script>
-        // Toggle between Login and Register forms
-        function toggleForm() {
-            const loginBox = document.getElementById('login-box');
-            const registerBox = document.getElementById('register-box');
-            loginBox.classList.toggle('hidden');
-            registerBox.classList.toggle('hidden');
-        }
-    </script>
+    <div class="container" id="signIn">
+        <h1 class="form-title">Sign In</h1>
+        <form method="post" action="register.php">
+          <div class="input-group">
+              <i class="fas fa-envelope"></i>
+              <input type="email" name="email" id="email" placeholder="Email" required>
+              <label for="email">Email</label>
+          </div>
+          <div class="input-group">
+              <i class="fas fa-lock"></i>
+              <input type="password" name="password" id="password" placeholder="Password" required>
+              <label for="password">Password</label>
+          </div>
+          <p class="recover">
+            <a href="#">Recover Password</a>
+          </p>
+         <input type="submit" class="btn" value="Sign In" name="signIn">
+        </form>
+        <p class="or">
+          ----------or--------
+        </p>
+        <div class="icons">
+          <i class="fab fa-google"></i>
+          <i class="fab fa-facebook"></i>
+        </div>
+        <div class="links">
+          <p>Don't have account yet?</p>
+          <button id="signUpButton">Sign Up</button>
+        </div>
+      </div>
+      <script src="script.js"></script>
 </body>
 </html>
