--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetCare Hub - Home</title>
+    <title>PETTOVET - Home</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- FontAwesome Icons -->
@@ -15,13 +15,13 @@
     <!-- Navigation Bar -->
     <header>
         <nav class="navbar">
-            <div class="logo">🐾 PetCare Hub</div>
+            <div class="logo">🐾 PETTOVET</div>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="dashboard.html">Features</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#innformation">Өвчний мэдээлэл хайх</a></li>
+                <li><a href="dashboard.html">Амьтны эмнэлэг хайх</a></li>
+                <li><a href="#contact">Зөвлөмж, зөвлөгөө</a></li>
                 <li><a href="login.html" class="btn-login">Login</a></li>
+               
             </ul>
         </nav>
     </header>
