--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="navbar">
             <div class="logo">🐾 PETTOVET</div>
             <ul class="nav-links">
-                <li><a href="#innformation">Өвчний мэдээлэл хайх</a></li>
+                <li><a href="#information">Өвчний мэдээлэл хайх</a></li>
                 <li><a href="dashboard.html">Амьтны эмнэлэг хайх</a></li>
                 <li><a href="#contact">Зөвлөмж, зөвлөгөө</a></li>
                 <li><a href="login.html" class="btn-login">Login</a></li>
