--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <!-- About Us Section -->
     <section id="about" class="about">
         <h2>Бидний тухай</h2>
-        <p><strong>PetCare Hub</strong> нь бүх тэжээвэр амьтан хамгийн сайн халамж хүртэх ёстой гэдэгт итгэдэг. Манай платформ тэжээвэр амьтдын эзэдэд эрүүл мэндийн бүртгэл, вакцинжуулалт болон бусад зүйлсийг хянахад тусалдаг. Та анх удаа амьтны эзэн болсон эсвэл олон жилийн турш амьтантай хамт байсан хамаагүй, бид танд туслахад бэлэн!</p>
+        <p><strong>PETTOVET</strong> нь бүх тэжээвэр амьтан хамгийн сайн халамж хүртэх ёстой гэдэгт итгэдэг. Манай платформ тэжээвэр амьтдын эзэдэд эрүүл мэндийн бүртгэл, вакцинжуулалт болон бусад зүйлсийг хянахад тусалдаг. Та анх удаа амьтны эзэн болсон эсвэл олон жилийн турш амьтантай хамт байсан хамаагүй, бид танд туслахад бэлэн!</p>
     </section>
 
     <!-- How It Works Section -->
@@ -145,7 +145,7 @@
     <section class="testimonials">
         <h2>Манай хэрэглэгчид юу гэж хэлж байна</h2>
         <div class="testimonial">
-            <p>"PetCare Hub нь миний нохойн вакцинжуулалт болон эрүүл мэндийн бүртгэлийг удирдахад маш амар болгосон. Үүнийг ашиглахгүйгээр амьдралыг төсөөлж чадахгүй!"</p>
+            <p>"PETTOVET нь миний нохойн вакцинжуулалт болон эрүүл мэндийн бүртгэлийг удирдахад маш амар болгосон. Үүнийг ашиглахгүйгээр амьдралыг төсөөлж чадахгүй!"</p>
             <span>- Сара М., Нохой эзэмшигч</span>
         </div>
         <div class="testimonial">
@@ -189,7 +189,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-content">
-            <p>&copy; 2024 PetCare Hub | Тэжээвэр амьтны эзэмшигчдэд зориулав ❤️</p>
+            <p>&copy; 2024 PETTOVET | Тэжээвэр амьтны эзэмшигчдэд зориулав ❤️</p>
             <div class="social-icons">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
