--- a/home.html
+++ b/home.html
@@ -85,6 +85,50 @@
             background-color: #0056b3;
             transform: scale(1.1);
         }
+
+        .services {
+            padding: 50px 30px;
+            background-color: #f4f4f4;
+            text-align: center;
+        }
+
+        .services h2 {
+            font-size: 32px;
+            color: #333;
+            margin-bottom: 30px;
+        }
+
+        .service {
+            display: inline-block;
+            width: 30%;
+            margin: 0 15px;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s;
+        }
+
+        .service:hover {
+            transform: scale(1.05);
+        }
+
+        .service i {
+            font-size: 50px;
+            color: #1e90ff;
+            margin-bottom: 15px;
+        }
+
+        .service h3 {
+            font-size: 24px;
+            color: #333;
+            margin-bottom: 10px;
+        }
+
+        .service p {
+            font-size: 16px;
+            color: #666;
+        }
     </style>
 </head>
 <body>
@@ -93,9 +137,9 @@
         <nav class="navbar">
             <div class="logo">🐾 PETTOVET</div>
             <ul class="nav-links">
-                <li><a href="search.html"><i class="fas fa-search"></i>Өвчний мэдээлэл хайх</a></li>
-                <li><a href="dashboard.html"><i class="fas fa-clinic-medical"></i>Амьтны эмнэлэг хайх</a></li>
-                <li><a href="#contact"><i class="fas fa-comments"></i>Зөвлөмж, зөвлөгөө</a></li>
+                <li><a href="#about"><i class="fas fa-search"></i>About</a></li>
+                <li><a href="#services"><i class="fas fa-clinic-medical"></i>Services</a></li>
+                <li><a href="#contact"><i class="fas fa-comments"></i>Contact Us</a></li>
                 <li><a href="login.html" class="btn-login"><i class="fas fa-user"></i>Нэвтрэх</a></li>
             </ul>
         </nav>
@@ -112,6 +156,8 @@
             <img src="istockphoto-1434988210-612x612__1_-removebg-preview.png" alt="Тэжээвэр амьтдын зураг">
         </div>
     </section>
+
+    
 
     <!-- About Us Section -->
     <section id="about" class="about">
@@ -160,7 +206,25 @@
         <p>Тэжээвэр амьтны эрүүл мэндийг хялбархан удирдаж эхлээрэй.</p>
         <a href="login.html" class="btn-cta">Бүртгүүлэх</a>
     </section>
-
+    <!-- Services Section -->
+    <section id="services" class="services">
+        <h2>Манай Үйлчилгээ</h2>
+        <div class="service">
+            <i class="fas fa-stethoscope"></i>
+            <h3>Эрүүл мэндийн үйлчилгээ</h3>
+            <p>Тэжээвэр амьтдын эмнэлгийн үзлэг, эмчилгээ, шинжилгээний үйлчилгээ үзүүлнэ.</p>
+        </div>
+        <div class="service">
+            <i class="fas fa-syringe"></i>
+            <h3>Вакцинжуулалт</h3>
+            <p>Тэжээвэр амьтдыг чухал вакцинуудтай цаг тухайд нь вакцинжуулах.</p>
+        </div>
+        <div class="service">
+            <i class="fas fa-paw"></i>
+            <h3>Гэрийн тэжээмэл амьтны асаргаа</h3>
+            <p>Тэжээвэр амьтанд өдөр тутмын асаргаа, хооллолт болон эрүүл мэндийн хяналт.</p>
+        </div>
+    </section>
     <!-- FAQ Section -->
     <section class="faq">
         <h2>Түгээмэл асуултууд</h2>
