--- a/home.html
+++ b/home.html
@@ -163,8 +163,8 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-text">
-            <h1>Таны тэжээвэр амьтны эрүүл мэндийг амархан удирдаарай</h1>
-            <p>Вакцинжуулалт, амьтны эмнэлгийн үзлэг, эрүүл мэндийн бүртгэлүүдийг нэг дор хянах боломжтой.</p>
+            <h1>Та тэжээвэр амьтны эрүүл мэндийг амархан удирдаарай</h1>
+            
             <a href="login.html" class="btn-cta">Эхлэх</a>
         </div>
         <div class="hero-image">
